@@ -2,8 +2,8 @@ package dto;
 
 import exception.BadRequestException;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Objects;
 
@@ -13,7 +13,7 @@ public class UserSignUpDto {
     private final String name;
     private final String email;
 
-    public UserSignUpDto(String id, String password, String name, String email) {
+    public UserSignUpDto(String id, String password, String name, String email) throws UnsupportedEncodingException {
         validateNotNullOrEmpty(id, "User ID");
         validateNotNullOrEmpty(password, "Password");
         validateNotNullOrEmpty(name, "Name");
@@ -21,7 +21,7 @@ public class UserSignUpDto {
         this.id = id;
         this.password = password;
         this.name = name;
-        this.email = URLDecoder.decode(email, StandardCharsets.UTF_8);
+        this.email = URLDecoder.decode(email, "UTF-8");
     }
 
     private void validateNotNullOrEmpty(String value, String fieldName) {
@@ -46,17 +46,22 @@ public class UserSignUpDto {
         return name;
     }
 
-    public static UserSignUpDto fromUrlParameters(String pathUrl) {
+    public static UserSignUpDto fromRequestBody(byte[] requestBody) {
         try {
             HashMap<String, String> map = new HashMap<>();
-            String[] splitUrl = pathUrl.split("\\?");
-            String[] parameters = splitUrl[1].split("&");
-            for (String param : parameters) {
-                String[] value = param.split("=");
-                map.put(value[0], value[1]);
+            String body = new String(requestBody);
+            if (!body.isEmpty()) {
+                String[] pairs = body.split("&");
+
+                for (String pair : pairs) {
+                    String[] keyValue = pair.split("=");
+                    String key = keyValue[0];
+                    String value = keyValue[1];
+                    map.put(key, value);
+                }
             }
             return new UserSignUpDto(map.get("userId"), map.get("password"), map.get("name"), map.get("email"));
-        } catch (IndexOutOfBoundsException | IllegalArgumentException e) {
+        } catch (IndexOutOfBoundsException | IllegalArgumentException | UnsupportedEncodingException e) {
             throw new BadRequestException("Please fill in all the necessary factors", e);
         }
     }
